--- a/11_react-basics/06_02_state_exercise_2_portfolio/portfolio-exercise/package.json
+++ b/11_react-basics/06_02_state_exercise_2_portfolio/portfolio-exercise/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch ./src/utils/data.json"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
     "framer-motion": "^10.12.14",
-    "vite": "^4.3.8"
+    "vite": "^4.3.8",
+    "json-server": "^0.17.3"
   }
 }
