--- a/12_react-advanced/01_error-boundaries/package.json
+++ b/12_react-advanced/01_error-boundaries/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,9 +14,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.4.7"
+    "happy-dom": "^10.5.2",
+    "vite": "^4.4.7",
+    "vitest": "^0.33.0"
   }
 }
