--- a/12_react-advanced/01_error-boundaries/package.json
+++ b/12_react-advanced/01_error-boundaries/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^3.1.0",
     "happy-dom": "^10.5.2",
+    "typescript": "^5.1.6",
     "vite": "^4.4.7",
     "vitest": "^0.33.0"
   }
